# maia

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/maia_mail_assistant/: __init__.py  config.py  email_providers.py  main.py  models.py
src/maia_mail_assistant/gui/: __init__.py  config_windows.py  email_assistant.py  widgets.py
tests/: __init__.py  conftest.py  test_config.py  test_email_providers.py
